--- a/about/index.html
+++ b/about/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: About Kiemute Oyibo
 ---
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+			<p>Kiemute Oyibo is a postdoctoral fellow in the School of Public Health and Health Systems at the University of Waterloo, Canada. He received his PhD in Computer Science from the University of Saskatchewan, Canada. His current research interests include Behavior Change, Persuasive Technology, Personalization, Digital Health and Human-Computer Interaction. He has published over 60 academic papers, which have received over 500 citations on Google Scholar. His research on the design of a culture-tailored persuasive health application called BEN’FIT, upon which his PhD dissertation is based, received the Gold Award at the Human Computer Interaction International 2019 Student Design Competition in Florida. He has peer-reviewed for several computer science conferences and journals, including Computing in Human Behavior, User Modeling and User-Adapted Interaction, Health Informatics, etc. Above all, he has co-edited international workshop proceedings and a special issue on Personalizing Persuasive Technology.</p>
 
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
