--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@ title: CV of Kiemute Oyibo
 
 	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Kiemute Oyibo/h1>
+					<h1>Kiemute Oyibo</h1>
 					<address>
 					<strong>Ubiquitous Health Technology Lab</strong><br>
 					Faculty of Public Health<br>
