--- a/contact/index.html
+++ b/contact/index.html
@@ -1,15 +1,27 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: Kiemute Oyibo
 ---
 
 		<div class="about">
-			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
-
+			<h1>Kiemute Oyibo</h1>
+					<address>
+					<strong>Ubiquitous Health Technology Lab</strong><br>
+					Faculty of Public Health<br>
+					University of Waterloo<br>
+					Waterloo, ON, Canada N2L 3G1<br>
+					<!-- <abbr title="phone">P:</abbr> (123) 456-7890<br> -->
+					<span class="obfuscate">kiemute.oyibo@uwaterloo.com</span>
+					</address>
+			
+			
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
 				<li><a href="#">Your Departmental Webpage</a></li>
 				<li><a href="#">Another site you want to link to</a></li>
 				</ul>
 		</div>
+
+
+
+	
