--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
+---
+layout: default
+title: About Kiemute Oyibo
+---
+
+		<div class="about">
+			<h2>Kiemute Oyibo>
+			<p>Kiemute Oyibo is a postdoctoral fellow in the School of Public Health and Health Systems at the University of Waterloo, Canada. 
+				He received his PhD in Computer Science from the University of Saskatchewan, Canada. 
+				His current research interests include Behavior Change, Persuasive Technology, Personalization, Digital Health and Human-Computer Interaction. 
+				He has published over 60 academic papers, which have received over 500 citations on Google Scholar. </p>
+				
+				<p>His research on the design of a culture-tailored persuasive health application called BEN’FIT, upon which his PhD dissertation is based, 
+					received the Gold Award at the Human Computer Interaction International 2019 Student Design Competition in Florida. 
+					He has peer-reviewed for several computer science conferences and journals, including Computing in Human Behavior, 
+					User Modeling and User-Adapted Interaction, Health Informatics, etc. Above all, he has co-edited international 
+					workshop proceedings and a special issue on Personalizing Persuasive Technology.</p>
+
+			<ul class="contacts">
+				<li><a href="#">@TwitterHandle</a></li>
+				<li><a href="#">Your Departmental Webpage</a></li>
+				<li><a href="#">Another site you want to link to</a></li>
+				</ul>
+		</div>
+
+<!--
 <!DOCTYPE html>
 <html>
 	<head>
@@ -16,8 +42,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Hank Quinlan!</h1>
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
@@ -26,3 +51,4 @@
 		</footer>
 	</body>
 </html>
+-->
