--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: About Kiemute Oyibo
 ---
 
 		<div class="about">
-			<h2>Kiemute Oyibo>
+			<h2>Kiemute Oyibo</h2>
 			<p>Kiemute Oyibo is a postdoctoral fellow in the School of Public Health and Health Systems at the University of Waterloo, Canada. 
 				He received his PhD in Computer Science from the University of Saskatchewan, Canada. 
 				His current research interests include Behavior Change, Persuasive Technology, Personalization, Digital Health and Human-Computer Interaction. 
