--- a/contact/index.html
+++ b/contact/index.html
@@ -3,8 +3,9 @@ layout: default
 title: Kiemute Oyibo
 ---
 
-		<div class="about">
-			<h1>Kiemute Oyibo</h1>
+		<!-- <div class="about"> -->
+                 <div class="about">
+			<h2>Kiemute Oyibo</h2>
 					<address>
 					<strong>Ubiquitous Health Technology Lab</strong><br>
 					Faculty of Public Health<br>
