--- a/presentations/index.html
+++ b/presentations/index.html
@@ -5,7 +5,7 @@ title: Kiemute Oyibo's Presentations
 
 	<div>
 	
-					<h2>Research</h2>
+					<h2>Presentations</h2>
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
 					
